@@ -38,6 +38,30 @@ public class StatementTest extends TestBase
    }
 
    /**
+    * Test for bug #559, unique constraint violation error hidden by an internal
+    * jTDS error.
+    */
+   public void testBug559()
+      throws Exception
+   {
+      Statement st = con.createStatement();
+      st.executeUpdate( "create table #Bug559 (A int, unique (A))" );
+
+      try
+      {
+         st.executeUpdate( "select 1;insert into #Bug559 values( 1 );insert into #Bug559 values( 1 )" );
+         fail();
+      }
+      catch( SQLException e )
+      {
+         // expected, executeUpdate() cannot return a resultset
+         assertTrue( e.getMessage().toLowerCase().contains( "executeupdate" ) );
+      }
+
+      st.close();
+   }
+
+   /**
     * Test for bug #609, slow finalization in {@link SharedSocket#closeStream()}
     * can block JVM finalizer thread or cause OOM errors.
     */
